--- a/First-period/HTMLeCSS/Atividade-3/pag3.css
+++ b/First-period/HTMLeCSS/Atividade-3/pag3.css
@@ -142,6 +142,10 @@ header{
     
 }
 
+.background .mundo-container{
+    background-color: #294c71;
+}
+
 .mundo-container h4{
     background-color: #294c71;
     padding-left: 3px;
@@ -154,6 +158,7 @@ hr{
 }
 
 .mundo-flex{
+    background-color: #fff;
     margin-top: 0.5em;
     display: flex;
 }
